# godot-sandbox-programs

./: .gitignore  AGENTS.md  build-csharp.sh  test-libriscv.sh
.github/workflows/: test-gdscript-compiler.yml
ext/LuaJIT/: README.md
ext/LuaJIT/src/: lj_ccall.c
ext/geometry-central/: .gitrepo
ext/godot-sandbox/: .gitrepo
ext/libriscv/binaries/barebones/ext/tinyprintf/: AGENTS.md
ext/libriscv/binaries/barebones/ext/tinyprintf/.github/workflows/: test-gdscript-compiler.yml
ext/libriscv/binaries/barebones/ext/tinyprintf/ext/LuaJIT/: .gitrepo
ext/libriscv/binaries/barebones/ext/tinyprintf/ext/LuaJIT/src/: lj_arch.h  lj_asm.c  lj_ccall.h  vm_riscv64.dasc
ext/libriscv/binaries/barebones/ext/tinyprintf/ext/eigen/: .gitrepo
ext/libriscv/binaries/barebones/ext/tinyprintf/ext/libigl/: .gitrepo
ext/libriscv/binaries/barebones/ext/tinyprintf/programs/: CMakeLists.txt
ext/libriscv/binaries/barebones/ext/tinyprintf/programs/gdscript-native/: BUILD.md  RUN_C_ELF.md  RUN_ELF.md  code_memory_manager.h  elf_generator.cpp  function_registry.cpp  inspect_elf.sh  test_data_loader.cpp  test_debug_simulate.cpp  test_exec_segment.cpp  test_input.gd  test_libriscv_docker.sh  test_page_check.cpp  test_riscv_assembly.sh  test_verbose.cpp
ext/libriscv/binaries/barebones/ext/tinyprintf/programs/gdscript-native/parser/: ast.h  errors.h  gdscript_parser.cpp
ext/libriscv/binaries/barebones/ext/tinyprintf/programs/gdscript-native/test_data/: .gitrepo
ext/libriscv/binaries/barebones/ext/tinyprintf/programs/gdscript-native/test_output/: EXECUTE_ELF.md  EXECUTION_OPTIONS.md  HOW_TO_EXECUTE.md  QUICK_START.md  run_in_docker.sh  simple_elf_test  test_execution.sh  test_macos.sh
ext/libriscv/binaries/barebones/ext/tinyprintf/programs/gdscript-native/tests/: test_dataset.cpp  test_end_to_end_features.cpp
ext/libriscv/examples/webapi/cpp-httplib/: .gitrepo
ext/libriscv/lib/libriscv/: decoder_cache.cpp
ext/libriscv/tests/Catch2/: .gitrepo
ext/libriscv/tests/unit/ext/lodepng/: .gitrepo
programs/: CMakeLists.txt
programs/csharp-hello/: API_ANALYSIS.md  CMakeLists.txt  PLAN.md  Program.cs  README.md  SandboxAPI.cs  csharp-hello.csproj
programs/gdscript-native/: .gitignore  CMakeLists.txt  CURRENT_STATUS.md  Dockerfile.libriscv  IMPLEMENTATION_STATUS.md  INTERPRET_MODE_STATUS.md  PROGRESS_REPORT.md  README.md  TESTING_WITH_LIBRISCV.md  TEST_STATUS.md  ast_to_riscv.cpp  ast_to_riscv_biscuit.cpp  ast_to_riscv_biscuit.h  code_memory_manager.h  elf_generator.cpp  elf_generator.h  function_registry.cpp  function_registry.h  gdb_commands.txt  main.cpp  simple_elf_test.cpp  test_data_loader.h  test_elf_generation.cpp  test_libriscv.cpp  test_reset_check.cpp
programs/gdscript-native/decisions/: 0001-migration-strategy.md  0002-testing-environments.md  0003-beamasm-template-approach.md  0004-dual-mode-architecture.md  0005-recursive-descent-parser.md  0006-indent-dedent-tokens.md  0007-biscuit-riscv-codegen.md  0008-elf-generation-libriscv.md  0009-structured-error-handling.md  0010-memory-management-raii.md  0011-constants-centralization.md  0012-godot-cpp-naming-conventions.md  0013-function-registry-calling-convention.md  0014-dynamic-buffer-growth.md  0015-ast-to-riscv-direct-compilation.md  0016-register-allocation-strategy.md  README.md
programs/gdscript-native/deprecated/: README.md  ast_to_ir.cpp  ast_to_ir.h  ast_to_riscv.h
programs/gdscript-native/deprecated/mlir/: ir_to_riscv.h  mlir_builder.h  mlir_ir.cpp  mlir_wrapper.h
programs/gdscript-native/mlir/: ir_to_riscv.cpp  mlir_ir.h  mlir_ops.h  mlir_wrapper.cpp
programs/gdscript-native/parser/: ast.h  errors.cpp  errors.h  gdscript_parser.cpp  gdscript_parser.h
programs/gdscript-native/src/: ast_interpreter.cpp  ast_interpreter.h  ast_to_c.cpp  ast_to_c.h  ast_to_c_mustache_example.cpp  ast_to_riscv_biscuit.cpp  ast_to_riscv_biscuit.h  code_memory_manager.cpp  compiler_mode.h  constants.h  elf_generator.cpp  elf_generator.h  function_registry.cpp  function_registry.h  main.cpp  riscv_code_templates.cpp  riscv_code_templates.h
programs/gdscript-native/src/godot_vm/: ast_to_bytecode_adapter.h
programs/gdscript-native/src/parser/: errors.cpp  gdscript_parser.cpp  gdscript_parser.h  gdscript_tokenizer.cpp  gdscript_tokenizer.h
programs/gdscript-native/test_output/: INSPECTION_SUMMARY.md  QEMU_TEST.md  simple.elf
programs/gdscript-native/tests/: CMakeLists.txt  test_adhoc  test_adhoc.cpp  test_assignment_debug.cpp  test_assignment_parse.cpp  test_ast_building  test_ast_building.cpp  test_ast_interpreter.cpp  test_ast_to_mlir.cpp  test_compiler.cpp  test_compiler_basic.cpp  test_compiler_codegen.cpp  test_compiler_execution.cpp  test_compiler_features.cpp  test_compiler_helpers.h  test_compiler_integration.cpp  test_compiler_operators.cpp  test_compiler_system.cpp  test_dataset.cpp  test_dataset_parse.cpp  test_debug_function_flow  test_debug_parse  test_debug_program_data  test_debug_result  test_debug_simple.cpp  test_end_to_end_features.cpp  test_full_grammar  test_function_debug  test_grammar_debug  test_grammar_step  test_integration.cpp  test_minimal  test_parser  test_parser.cpp  test_parser_basic.cpp  test_parser_expressions.cpp  test_parser_statements.cpp  test_runner.cpp  test_token_debug.cpp
programs/gdscript-vm/: CMakeLists.txt  README.md  ast_to_bytecode_adapter.cpp  ast_to_bytecode_adapter.h  gdscript.cpp  gdscript.h  gdscript_byte_codegen.cpp  gdscript_byte_codegen.h  gdscript_codegen.h  gdscript_function.h  gdscript_utility_functions.cpp  gdscript_utility_functions.h  gdscript_vm.cpp  godot_core_stubs.h  main.cpp
programs/gdscript-vm/tests/: CMakeLists.txt  test_runner.cpp  test_vm_basic.cpp
